Немного изменил текст
добавил тег <br> но не смог нормально выравнить текст

--- a/проект 11-источник-мастер/popular.html
+++ b/проект 11-источник-мастер/popular.html
@@ -8,8 +8,8 @@
 <body>
 
 <main>
-
-    <h2>Популярно сейчас</h2>
+    <!--Тест поправить не смог(-->
+    <h2>Популярно<br>сейчас</h2>
 
     <div class="row">
 
