--- a/проект 11-источник-мастер/genres.html
+++ b/проект 11-источник-мастер/genres.html
@@ -10,7 +10,7 @@
 <main>
 
     <h2> Популярные жанры </h2>
-    <p>Будем присылать хорошие письма, спам присылать не будем</p>
+    <p> наиболее популярные жанры и их отличия приведены ниже </p>
     <div class="genre-first">Фантастика</div>
     <div class="genre-second">Детективы</div>
     <div class="genre-third">Мистика</div>
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
