--- a/project11-source-master/mailing-list.html
+++ b/project11-source-master/mailing-list.html
@@ -10,13 +10,13 @@
         <h2>Подпишитесь <br> на нашу рассылку</h2>
         <p>Будем присылать хорошие письма, спам присылать не будем</p>
         <form action="">
-            <input type="text" class="text-input" placeholder="Ваша почта">
-            <p><input type="checkbox" /> Про детективы </p>
-            <p><input type="checkbox" /> Про путешествия </p>
-            <p><input type="checkbox" /> Про фантастику </p>
-            <p><input type="checkbox" /> Про новинки </p>
+            <input type="text" class="but" placeholder="Ваша почта">
+            <p><input class="but-mailing" class="test" type="checkbox" /> Про детективы </p>
+            <p><input class="but-mailing" type="checkbox" /> Про путешествия </p>
+            <p><input class="but-mailing" type="checkbox" /> Про фантастику </p>
+            <p><input class="but-mailing" type="checkbox" /> Про новинки </p>
         </form>
-        <input type="submit" class="button" value="Отправить">
+        <input class="but_sub" type="submit" class="button" value="Отправить">
     </main>
 </body>
 </html>
