--- a/проект 11-источник-мастер/subscription.html
+++ b/проект 11-источник-мастер/subscription.html
@@ -8,20 +8,21 @@
 <body>
 <main>
     <h2>Подписка</h2>
-    <p>Оформите подписку и получайте всякое полезное!</p>
+    <p>Оформите подписку, получайте больше бонусов, повышенный кэшбек и не платите за доставку</p>
 
     <div class="box-green">
         <div class="text-large">200 Р</div>
         <div>В месяц при оплате на месяц</div>
     </div>
+    <br>
 
-    <a href="" class="button-link">Подписаться на год</a>
-
+    <a href="" class="button-link">Подписаться на месяц</a>
+    <br><br>
     <div class="box-purple">
-        <div class="text-large">200 Р</div>
-        <divc>В месяц при оплате на месяц</divc>
+        <div class="text-large">1500 Р</div>
+        <divc>В год при оплате в год</divc>
     </div>
-
+    <br>
     <a href="" class="button-link">Подписаться на год</a>
 
 
